--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,11 @@
             "App\\": "src"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "Test\\": "tests"
+        }
+    },
     "extra": {
         "laravel": {
             "providers": [
