--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,14 @@
 {
     "name": "rkb/convert_to_ordinal",
-    "description": "This package has converted any interger number to it's ordinal number.",
+    "description": "This package has converted any valid number and string to it's ordinal number.",
     "type": "library",
     "license": "MIT",
-    "authors": [{
-        "name": "Rakib Hossain",
-        "email": "rakib.151045@gmail.com"
-    }],
+    "authors": [
+        {
+            "name": "Rakib Hossain",
+            "email": "rakib.151045@gmail.com"
+        }
+    ],
     "minimum-stability": "dev",
     "require": {},
     "autoload": {
